# cosmwasm-chess

./: .gitignore  Cargo.toml  README.md
.cargo/: config
.github/workflows/: ci.yml
artifacts/0.3.0/: checksums.txt  checksums_intermediate.txt  cosmwasm_chess.wasm
examples/: schema.rs
schema/: cw_chess_action.json  cw_chess_color.json  cw_chess_game.json  cw_chess_game_over.json  cw_chess_move.json  cw_chess_result.json  execute_msg.json  game_summary.json  query_msg.json
scripts/: juno_upload.md  local_deploy.sh  local_game.sh
src/: chess_engine_game.rs  contract.rs  contract_test.rs  cwchess.rs  error.rs  lib.rs  msg.rs  state.rs  state_test.rs
