[package]
name = "cosmwasm-chess"
version = "0.1.0"
edition = "2018"
exclude = [
  "artifacts"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
chess = "3.2.0"
cosmwasm-std = "1.0.0-beta5"
cosmwasm-storage = "1.0.0-beta5"
cw-storage-plus = "0.12"
cw2 = "0.12"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
cosmwasm-schema = "1.0.0-beta5"
cosmwasm-vm = "1.0.0-beta5"

[features]
cranelift = ["cosmwasm-vm/cranelift"]
backtraces = ["cosmwasm-std/backtraces", "cosmwasm-vm/backtraces"]

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  --platform linux/amd64 cosmwasm/rust-optimizer:0.12.5
"""

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
