[package]
name = "cosmwasm-chess"
version = "0.4.0"
edition = "2018"
exclude = [
  "artifacts"
]
license = "CC0-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
chess-engine = { git = "https://github.com/jeremyfee/chess-engine", branch = "game" }
cosmwasm-std = "1.0.0-beta7"
cosmwasm-storage = "1.0.0-beta7"
cw-storage-plus = "0.13.1"
cw2 = "0.13.1"
schemars = "0.8.8"
serde = { version = "1.0.136", default-features = false, features = ["derive"] }
serde-json-wasm = "0.3.2"
thiserror = "^1.0.30"

[dev-dependencies]
cosmwasm-schema = "1.0.0-beta7"
cosmwasm-vm = "1.0.0-beta7"

[features]
cranelift = ["cosmwasm-vm/cranelift"]
backtraces = ["cosmwasm-std/backtraces", "cosmwasm-vm/backtraces"]

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.5
"""

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false
